--- a/index.html
+++ b/index.html
@@ -1,128 +1,75 @@
 <!DOCTYPE html>
 <html>
-    
     <head>
-        <link href="css/index.css" rel="stylesheet" type="text/css">
-        <div class="fs">
-            <img src="images/bck.jpg" class="bgc" alt="123">
-            <div class="mm">
-                <h1 class="contact">Контакты</h1>
-                <h1 class="kolekcia">Коллекции</h1>
-                <h1 class="delivery">Доставка</h1>
-                <h1 class="Catalog">Каталог</h1>
-            </div>
-                <button class="frame1">
-                   <h5> ВИННАЯ КАРТА </h5>
-                   </button>
-                   <button class="frame2">
-                    <h6> ДЕГУСТАЦИЯ </h6>
-                    </button>            
-            <div class="line3">
-            </div>
-            <div class="line2">
-            </div>
-            <div class="line1">
-            </div>
-            <div class="np">
-                <h7>Новокузнечный переулок 4\1</h7>
-            </div>
-            <div class="number">
-                <h8>8 (812-123-45-67)</h8>
-            </div>>
-        </div>
-        <div class="txt"> 
-            <img src="images/cup.png" class="cupimage" alt="123">
-            
-        <div class="maintext">
-            <h9>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. Mauris dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit. Proin vitae aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla tellus tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor, eget vitae dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus, amet, quis risus. Pellentesque scelerisque nunc, orci aliquam quis</h9>
-        </div>
-        <div class="luchsiyvkus">
-            <h10>Лучший вкус, это вкус долголетнего вина</h10>
-        </div>
-        <div class="line6">
-        </div>
-        <div class="border"></div>
-</div>
-        </div>
-        <div class="collection">
-            <div class="newcoll">
-                <h11>
-                    Новинки коллекций
-                </h11>
-            </div>
-            <div class="secondtext">
-                <h13><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. </b> </h13>
-            </div>
-                <div class="groth">
-                    <h12>
-                        <p>МАРТ 1980</p> 
-                        Урожай Марселя
-                    </h12>
-                </div>
-                <div class="line4"></div>
-            <div class="slider">
-            <img src="images/collection1.jpg" class="collection1" alt="">
-            <img src="images/collection2.jpg" class="collection2" alt="">
-            <img src="images/collection3.jpg" class="collection3" alt="">
-        </div>
-        <div class="table">
-            <div class="table-line1"></div>
-                <div class="table-line2"></div>
-                    <div class="table-line3"></div>
-            <h1 class="vine1">Colli Euganei Bianco Ca' Lustra 1980<h1>
-                <h1 class="vine2">Colli Euganei Bianco Ca' Lustra 1980<h1>
-                    <h1 class="vine3">Colli Euganei Bianco Ca' Lustra 1980<h1>
-                        <h1 class="vine4"><b>Красочная бутылка вина из Марселя</b><h1>
-                            <h1 class="vine5"><b>Красочная бутылка вина из Марселя</b><h1>
-                                <h1 class="vine6"><b>Красочная бутылка вина из Марселя</b><h1>
-                                    <h1 class="vine7"><b>1980</b><h1>
-                                        <h1 class="vine8"><b>1980</b><h1>
-                                            <h1 class="vine9"><b>1980</b><h1>
-
-         <div class="lorem">
-            <h3 class="text1"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac.</b> </h3>
-                </div>
-       <input type="button" value="УЗНАТЬ ПОДРОБНЕЕ" class="check-info" alt="">
-       <div class="bot-line"></div>
-    </div>
-    <div class="form">
-        <div class="head-text"><h1 class="text5">Запись на дегустацию</h1></div>
-        <input type="button" class="form-button" value="ЗАПИСАТЬСЯ">
-        <div class="text-side"><h3 class="text6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum.</h3></div>
-        <div class="border-form"></div>
-        <input type="text" class="name-text" placeholder="Имя" size="20">
-        <input type="text" class="name-text2" placeholder="Телефон" size="20">
-        <input type="text" class="name-text3" placeholder="Бутик на Невском" size="15">
-        <div class="line13"></div>
-        <div class="line14"></div>
-        <div class="line15"></div>
-        <img src="images/vinograd.png" class="vinograd" alt="">
-        <img src="images/bochka.png" class="bochka" alt="">
-    </div>
-<footer class="footer">
-    <h2 class="main">Главная</h2>
-    <h2 class="katalog">Каталог</h2>
-    <h2 class="postav">Поставщики</h2>
-    <h2 class="collection4">Коллекции</h2>
-    <h2 class="degustation">Дегустация</h2>
-    <h2 class="col2020">Коллекция 2020</h2>
-    <h2 class="contact-us">Контакты</h2>
-
-    <div class="footer-line1"></div>
-    <div class="footer-line2"></div>
-    <div class="footer-line3"></div>
-    <div class="footer-line4"></div>
-    <div class="footer-line5"></div>
-    <div class="footer-line6"></div>
-
-    <h1 class="footer-butik">винный бутик LE CORTE</h1>
-    <h1 class="footer-butik foter-number">8 (812) 123-45-67</h1>
-    <h1 class="yt">yt</h1>
-    <h1 class="vk">vk</h1>
-    <h1 class="fb">fb</h1>
-    <h1 class="footer-butik footer-coop">© le-corte.ru</h1>
-</footer>
-        </body>
+        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
-    >>>>>>> b663bec5d116f8f0000d1f578efd127c7fbd04cc
+    <body>
+            <div class="bgc"></div>
+            <div class="fs">
+                <div class="adress">
+                    <b> Новокузнечный переулок 4/1</b>
+                </div>
+                <div class="num">
+                    <b>8 (812) 123-45-67</b>
+                </div>
+            <div class="mainmenu">
+                <div class="text"><h2 class="glavnoe"><b>Каталог</b></h2></div>
+                <div class="text"><h2 class="glavnoe"><b>Доставка</b></h2></div>
+                <div class="text"><h2 class="glavnoe"><b>Коллекции</b></h2></div>
+                <div class="text"><h2 class="glavnoe"><b>Контакты</b></h2></div>
+            </div>
+            <div class="line"></div>
+            <div class="line line2"></div>
+            <div class="line line3"></div>
+            <div class="buttons">
+                <button class="button1"> 
+                    <h1 class="btnstyle"><b>винная карта</b></h1>
+                </button>
+                <button class="button1">
+                    <h1 class="btnstyle"><b>дегустация</b></h1>
+                </button>
+            </div>
+            <div class="ss">
+                <div class="borderss">
+                    <div class="zag"><b>Лучший вкус, это вкус долголетнего вина</b></div>
+                    <div class="ssline"></div>
+                    <div class="maintext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. Mauris dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit. Proin vitae aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla tellus tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor, eget vitae dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus, amet, quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</div>
+                <div class="cup"></div>
+                </div>
+            </div>
+            <div class="ts">
+                <div class="newcol">Новинки коллекций</div>
+                <div class="zag2">
+                    <div>МАРТ 1980</div>
+                    <div>УРОЖАЙ МАРСЕЛЯ</div>
+                </div>
+                <div class="tstext">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. 
+                </div>
+                <div class="grid-container">
+                    <div class="item1"><b>1980</b></div>
+                    <div class="item2">Colli Euganei Bianco Ca' Lustra 1980</div>
+                    <div class="item3">Красочная бутылка вина из Марселя</div>  
+                    <div class="item4"><b>1980</b></div>
+                    <div class="item5">Colli Euganei Bianco Ca' Lustra 1980</div>
+                    <div class="item6">Красочная бутылка вина из Марселя</div>
+                    <div class="item7"><b>1980</b></div>
+                    <div class="item8">Colli Euganei Bianco Ca' Lustra 1980</div>
+                    <div class="item9">Красочная бутылка вина из Марселя</div>  
+                  </div>
+                  <div class="tsline"></div>
+                  <div class="tsline2"></div>
+                  <div class="tsline3"></div>
+                  <div class="tstext2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac.</div>
+                  <button class="tsbutton"> УЗНАТЬ ПОДРОБНЕЕ</button>
+                  <div class="vine"></div>
+                  <div class="bottles">
+                      <img src="images/bottle1.png">
+                      <img src="images/bottle2.png"></img>
+                  </div>
+                  <div class="topline"></div>
+                  <div class="middleline"></div>
+                  <div class="bottomline"></div>
+            </div>
+    </body>
     </html>
