--- a/index.html
+++ b/index.html
@@ -1,75 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-    </head>
-    <body>
-            <div class="bgc"></div>
-            <div class="fs">
-                <div class="adress">
-                    <b> Новокузнечный переулок 4/1</b>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vine Project</title>
+</head>
+<body>
+        <div class="wrapper">
+            <header class="header">
+                <div class="header__container _container">
+                    <div class="header__menu menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">
+                                    Каталог
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">
+                                    Доставка
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">
+                                    Коллекции
+                                </a>
+                            </li>
+                            <li class="menu__item"> 
+                                <a href="" class="menu__link">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="num">
-                    <b>8 (812) 123-45-67</b>
+            </header>
+            <main class="page">
+                <div class="page__main-block main-block">
+                    <div class="main-block__container _container">
+                        <div class="main-block__buttons">
+                            <a href="" class="main-block__button main-block__button-vine">
+                                винная карта
+                            </a>
+                            <a href="" class="main-block__button main-block__button-degustation">
+                                дегустация
+                            </a>
+                        </div>
+                    </div>
+                    <div class="main-block__bg _ibg">
+                        <img src="/images/bgc.png" alt="background">
+                    </div>
                 </div>
-            <div class="mainmenu">
-                <div class="text"><h2 class="glavnoe"><b>Каталог</b></h2></div>
-                <div class="text"><h2 class="glavnoe"><b>Доставка</b></h2></div>
-                <div class="text"><h2 class="glavnoe"><b>Коллекции</b></h2></div>
-                <div class="text"><h2 class="glavnoe"><b>Контакты</b></h2></div>
-            </div>
-            <div class="line"></div>
-            <div class="line line2"></div>
-            <div class="line line3"></div>
-            <div class="buttons">
-                <button class="button1"> 
-                    <h1 class="btnstyle"><b>винная карта</b></h1>
-                </button>
-                <button class="button1">
-                    <h1 class="btnstyle"><b>дегустация</b></h1>
-                </button>
-            </div>
-            <div class="ss">
-                <div class="borderss">
-                    <div class="zag"><b>Лучший вкус, это вкус долголетнего вина</b></div>
-                    <div class="ssline"></div>
-                    <div class="maintext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. Mauris dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit. Proin vitae aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla tellus tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor, eget vitae dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus, amet, quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</div>
-                <div class="cup"></div>
-                </div>
-            </div>
-            <div class="ts">
-                <div class="newcol">Новинки коллекций</div>
-                <div class="zag2">
-                    <div>МАРТ 1980</div>
-                    <div>УРОЖАЙ МАРСЕЛЯ</div>
-                </div>
-                <div class="tstext">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. 
-                </div>
-                <div class="grid-container">
-                    <div class="item1"><b>1980</b></div>
-                    <div class="item2">Colli Euganei Bianco Ca' Lustra 1980</div>
-                    <div class="item3">Красочная бутылка вина из Марселя</div>  
-                    <div class="item4"><b>1980</b></div>
-                    <div class="item5">Colli Euganei Bianco Ca' Lustra 1980</div>
-                    <div class="item6">Красочная бутылка вина из Марселя</div>
-                    <div class="item7"><b>1980</b></div>
-                    <div class="item8">Colli Euganei Bianco Ca' Lustra 1980</div>
-                    <div class="item9">Красочная бутылка вина из Марселя</div>  
-                  </div>
-                  <div class="tsline"></div>
-                  <div class="tsline2"></div>
-                  <div class="tsline3"></div>
-                  <div class="tstext2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac.</div>
-                  <button class="tsbutton"> УЗНАТЬ ПОДРОБНЕЕ</button>
-                  <div class="vine"></div>
-                  <div class="bottles">
-                      <img src="images/bottle1.png">
-                      <img src="images/bottle2.png"></img>
-                  </div>
-                  <div class="topline"></div>
-                  <div class="middleline"></div>
-                  <div class="bottomline"></div>
-            </div>
-    </body>
-    </html>
+        </main>
+        </div>
+</body>
+</html>
